--- a/index.html
+++ b/index.html
@@ -58,6 +58,45 @@
         font-size: 2rem;
         background: antiquewhite;
     }
+
+    @media screen and (max-width: 800px) {
+        @media screen and (max-width: 768px) {
+    .image-container {
+        grid-template-columns: 1fr 1fr; /* 2 column layout */
+        width: 90%;
+        padding: 1rem;
+    }
+
+    .image-container img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .popup-image {
+        position: fixed;
+        inset: 0;
+        background: rgba(0, 0, 0, 0.7);
+        display: none;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+    }
+
+    .popup-image img {
+        width: 80%;
+        height: auto;
+    }
+
+    #cross {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 1.5rem;
+    }
+}
+
+
+    }
 </style>
 
 <body>
@@ -93,7 +132,7 @@
             var cross = document.getElementById("cross");
             cross.addEventListener("click", function () {
                 popup.style.display = "none"
-                document.querySelector(".image-container").style.display = "block";
+                document.querySelector(".image-container").style.display = "grid";
 
             })
         })
